--- a/qre/src/app/app.component.html
+++ b/qre/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+<md-toolbar color="primary">
+  <span>{{ title }}</span>
+  <md-toolbar-row>
+    <button md-raised-button color="accent">Button 1</button>
+    <button md-raised-button color="accent">Button 2</button>
+    <span></span>
+  </md-toolbar-row>
+</md-toolbar>
