Added twitter bootstrap [DOM]

--- a/qre/src/app/app.component.html
+++ b/qre/src/app/app.component.html
@@ -1,8 +1,51 @@
-<md-toolbar color="primary">
-  <span>{{ title }}</span>
-  <md-toolbar-row>
-    <button md-raised-button color="accent">Button 1</button>
-    <button md-raised-button color="accent">Button 2</button>
-    <span></span>
-  </md-toolbar-row>
-</md-toolbar>
+  
+<div class="container-fluid">
+  <nav class="navbar navbar-toggleable-md navbar-light" style="background-color: #e3f2fd;">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="#">{{ title }}</a>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+</div>
+
+<!--<div class="container">
+  <div class="row">
+    <ngb-carousel class="">
+      <template ngbSlide>
+        <img src="http://lorempixel.com/900/500?r=1" alt="Random first slide">
+        <div class="carousel-caption">
+          <h3>First slide label</h3>
+          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        </div>
+      </template>
+      <template ngbSlide>
+        <img src="http://lorempixel.com/900/500?r=2" alt="Random second slide">
+        <div class="carousel-caption">
+          <h3>Second slide label</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+      </template>
+      <template ngbSlide>
+        <img src="http://lorempixel.com/900/500?r=3" alt="Random third slide">
+        <div class="carousel-caption">
+          <h3>Third slide label</h3>
+          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        </div>
+      </template>
+    </ngb-carousel>
+  </div>
+</div>-->
+
+
