Added basic routing [DOM]

--- a/qre/src/app/app.component.html
+++ b/qre/src/app/app.component.html
@@ -4,7 +4,7 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" routerLink="/home">
       <img src="../assets/images/under-construction.webp" width="30" height="30" class="d-inline-block align-top" alt="">
       {{ title }}
     </a>
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink="/calculate">Calculations <span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
@@ -35,29 +35,7 @@
 
     <div class="col-md-9" id="main_display">
 
-        <ngb-carousel style="max-width: 900px; margin: 0 auto">
-          <template ngbSlide>
-            <img src="http://lorempixel.com/900/500?r=1" alt="Random first slide">
-            <div class="carousel-caption">
-              <h3>First slide label</h3>
-              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-            </div>
-          </template>
-          <template ngbSlide>
-            <img src="http://lorempixel.com/900/500?r=2" alt="Random second slide">
-            <div class="carousel-caption">
-              <h3>Second slide label</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-          </template>
-          <template ngbSlide>
-            <img src="http://lorempixel.com/900/500?r=3" alt="Random third slide">
-            <div class="carousel-caption">
-              <h3>Third slide label</h3>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-            </div>
-          </template>
-        </ngb-carousel>
+        <router-outlet></router-outlet>
 
     </div>
 
