--- a/qre/src/app/components/calculation/calculation.component.html
+++ b/qre/src/app/components/calculation/calculation.component.html
@@ -1,3 +1,134 @@
-<p>
-  calculation works!
-</p>
+<form class="mx-sm-4">
+
+  <div class="card">
+    <div class="card-header"> Property Details </div>
+    <div class="card-block">
+
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label"> Property Name: </label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" placeholder="Property A" required>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label"> Property Address: </label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" placeholder="123 Bleeker Street" required>
+        </div>
+      </div>
+
+      <div class="form-group row">
+
+        <label class="col-sm-2 col-form-label"> Total Square Feet: </label>
+        <div class="col-sm-2">
+          <input type="number" class="form-control" placeholder="1200" required>
+        </div>
+        
+        <label class="col-sm-2 col-form-label"> Total Units: </label>
+        <div class="col-sm-2">
+          <input type="number" class="form-control" placeholder="2" required>
+        </div>
+        
+        <label class="col-sm-2 col-form-label"> Rental Assumption: </label>
+        <div class="input-group col-sm-2">
+          <div class="input-group-addon">$</div>
+          <input type="number" class="form-control" placeholder="2000"> required
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="card mt-3">
+    <div class="card-header"> Rental Assumptions </div>
+    <div class="card-block">
+
+      <div class="form-group row">
+
+        <label class="col-sm-2 col-form-label"> Hold Period: </label>
+        <div class="col-sm-2">
+          <input type="number" class="form-control" placeholder="10" required>
+        </div>
+        
+        <label class="col-sm-2 col-form-label"> Market Rent Growth: </label>
+        <div class="input-group col-sm-2">
+          <input type="number" class="form-control" placeholder="3.00" required>
+          <div class="input-group-addon">%</div>
+        </div>
+        
+        <label class="col-sm-2 col-form-label"> Expense Growth: </label>
+        <div class="input-group col-sm-2">
+          <input type="number" class="form-control" placeholder="2.00" required>
+          <div class="input-group-addon">%</div>
+        </div>
+
+      </div>
+
+      <div class="form-group row">
+
+        <label class="col-sm-2 col-form-label"> Vacancy Rate: </label>
+        <div class="input-group col-sm-2">
+          <input type="number" class="form-control" placeholder="5.00" required>
+          <div class="input-group-addon">%</div>
+        </div>
+        
+        <label class="col-sm-2 col-form-label"> Exit Cap Rate: </label>
+        <div class="input-group col-sm-2">
+          <input type="number" class="form-control" placeholder="5.25" required>
+          <div class="input-group-addon">%</div>
+        </div>
+        
+        <label class="col-sm-2 col-form-label"> Cost of Sale: </label>
+        <div class="input-group col-sm-2">
+          <input type="number" class="form-control" placeholder="3.00" required>
+          <div class="input-group-addon">%</div>
+        </div>
+
+      </div>
+
+      <div class="form-group row">
+
+        <label class="col-sm-2 col-form-label"> Real Estate Taxes: </label>
+        <div class="input-group col-sm-2">
+          <div class="input-group-addon">$</div>
+          <input type="number" class="form-control" placeholder="6000" required>
+        </div>
+        
+        <label class="col-sm-2 col-form-label"> Other Expenses: </label>
+        <div class="input-group col-sm-2">
+          <div class="input-group-addon">$</div>
+          <input type="number" class="form-control" placeholder="5100" required>
+        </div>
+        
+        <label class="col-sm-2 col-form-label"> Required Return: </label>
+        <div class="input-group col-sm-2">
+          <input type="number" class="form-control" placeholder="5.0" required>
+          <div class="input-group-addon">%</div>
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="card mt-3">
+    <div class="card-header"> Run Calculations </div>
+    <div class="card-block">
+      <div class="form-group row">
+        <label class="col-sm-3 col-form-label"> Suggested Purchase Price: </label>
+        <div class="input-group col-sm-3">
+          <div class="input-group-addon">$</div>
+          <input type="number" class="form-control" placeholder="0.00" readonly>
+        </div>
+        <button type="submit" class="btn btn-primary" (click)="calculate()">Run Analysis</button>
+      </div>
+    </div>
+
+  </div>
+
+</form>
+
